2017-01-28  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dominatedhv_mex.c: Remove unused variable

	* misc/pareto/private/stk_dominatedhv_mex.c: Remove unused variable.

2017-01-27  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init: Fix install_mole_function (again)

	* stk_init: Fix install_mole_function (again).

	stk_init.m: Set use_silent to zero in Octave

	* stk_init.m: Set use_silent to zero in Octave.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

2017-01-25  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init: Fix install_mole_function

	* stk_init: Fix install_mole_function.

	stk_init: Use mex without -silent when it is not supported

	* stk_init: Use mex without -silent when it is not supported.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

	Fix minor issues in C source code

	* misc/distrib/private/stk_distrib_bivnorm0_cdf.c: Insert braces
	to avoid "Missing braces around initializer" warning.
	* misc/pareto/private/wfg.c: Remove unused variables.

2017-01-24  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/subsasgn.m: Octave 3.2.x repmat hack

	* arrays/@stk_dataframe/subsasgn.m: Hack for a problem related to
	repmat in Octave 3.2.x.

	Do not use ismatrix.

	* arrays/generic/stk_boundingbox.m: Do not use ismatrix.
	* misc/pareto/stk_dominatedhv.m: Do not use ismatrix.
	* admin/CODING_GUIDELINES: Explain why.
	* misc/error/stk_assert_box.m: Refer to CODING_GUIDELINES.

	stk_example_doe04.m: Do not use ~ to ignore unwanted outputs

	* examples/02_design_of_experiments/stk_example_doe04.m: Do not
	use ~ to ignore unwanted output arguments.
	* admin/CODING_GUIDELINES: Explain why.

	stk_plot1d.m: Ignore legend errors

	* misc/plot/stk_plot1d.m: Ignore legend errors.

2017-01-23  Julien Bect  <julien.bect@centralesupelec.fr>
