@@ -175,8 +175,10 @@ x = struct ('data', x_data, ...
 
 x = class (x, 'stk_dataframe');
 
-% Starting with Matlab R2014b, graphics handles are objects
-superiorto ('matlab.graphics.axis.Axes');
+try
+    % Starting with Matlab R2014b, graphics handles are objects
+    superiorto ('matlab.graphics.axis.Axes');
+end
 
 end % function
 
